tests/baselines/reference/overrideKeywordEs6.errors.txt
tests/cases/compiler/overrideKeywordEs6.ts(11,68): error TS1029: 'override' modifier must precede 'async' modifier.


==== tests/cases/compiler/overrideKeywordEs6.ts (1 errors) ====
    
    class Base {
        async getMeaningOfLife1(): Promise<number> { return Promise.resolve(42); }
        async getMeaningOfLife2(): Promise<number> { return Promise.reject(42); }
    }
    
    // The expected order of modifiers:
    //
    // [public | protected | private] [abstract | override] [static] [readonly | async] [get | set] identifier
    //
    class RejectWhenAsyncPrecedesOverrideModifier extends Base { async override getMeaningOfLife1(): Promise<number> { return Promise.reject(42); }; }
                                                                       ~~~~~~~~
!!! error TS1029: 'override' modifier must precede 'async' modifier.
    class AcceptWhenOverridePrecedesAsyncModifier extends Base { override async getMeaningOfLife2(): Promise<number> { return Promise.resolve(42); }; }
    